Listagem das Tags
+ add exibindo as tas tags 
+ add metodo para cadastrar novas tags

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -35,6 +35,10 @@
     background: #EAEAEA;
 }
 
+.skin-blue .treeview-menu>li>a:hover{
+    color: #808080;
+}
+
 .skin-blue .sidebar a {
     color: #808080;
 }
