--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -62,3 +62,19 @@
 .rotatio-left {
     transform: rotate(90deg);
 }
+
+.label-custom{
+    display: inline-block;
+    width: 18px;
+    height: 7px;
+    margin-right: 7px;
+    padding: .2em .6em .3em;
+    font-weight: 700;
+    font-size: 0;
+    line-height: 16px;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+}
